2025-10-15T01:59:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18515371180 # 1283
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
* notice: last 14d: unq all: 24 67
* notice: prev accum: outdated-unq outdated-all / unq all: 1226 5944 / 1254 6016
* notice: next accum: outdated-unq outdated-all / unq all: 1227 5948 / 1255 6017
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-09-30] / [2025-10-01 2025-10-14]

2025-10-14T12:55:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18497213563 # 1282
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
* notice: last 14d: unq all: 25 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1226 5944 / 1253 6015
* notice: next accum: outdated-unq outdated-all / unq all: 1226 5944 / 1254 6016
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-10-14]

2025-10-14T01:56:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18483091435 # 1281
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
* notice: last 14d: unq all: 24 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1224 5942 / 1253 6015
* notice: next accum: outdated-unq outdated-all / unq all: 1226 5944 / 1253 6015
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-29] / []

2025-10-12T02:00:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18437629904 # 1277