@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-10-15T01:59:17Z",
-  "count" : 13,
+  "timestamp" : "2025-10-15T12:55:41Z",
+  "count" : 11,
   "count_minmax" : [ 2, 15 ],
-  "count_decinc" : [ -2, +15 ],
+  "count_decinc" : [ -4, +15 ],
   "uniques" : 7,
   "uniques_minmax" : [ 1, 8 ],
   "uniques_decinc" : [ -1, +8 ]
