@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2025-10-15T01:59:17Z",
+  "timestamp" : "2025-10-15T12:55:41Z",
   "count_outdated" : 5948,
   "uniques_outdated" : 1227,
-  "count" : 6017,
-  "uniques" : 1255,
+  "count" : 6018,
+  "uniques" : 1256,
   "views" : [
     {
       "timestamp": "2025-10-01T00:00:00Z",
-      "count": 13,
+      "count": 11,
       "count_minmax": [ 2, 15 ],
-      "count_decinc": [ 2, 15 ],
+      "count_decinc": [ 4, 15 ],
       "uniques": 7,
       "uniques_minmax": [ 1, 8 ],
       "uniques_decinc": [ 1, 8 ]
@@ -76,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-10-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
