@@ -1,10 +1,10 @@
 {
-  "count": 67,
-  "uniques": 24,
+  "count": 66,
+  "uniques": 25,
   "views": [
     {
       "timestamp": "2025-10-01T00:00:00Z",
-      "count": 13,
+      "count": 11,
       "uniques": 7
     },
     {
@@ -41,6 +41,11 @@
       "timestamp": "2025-10-14T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-10-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
