@@ -1,3 +1,12 @@
+2025-10-15T12:55:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18529592193 # 1284
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
+* notice: last 14d: unq all: 25 66
+* notice: prev accum: outdated-unq outdated-all / unq all: 1227 5948 / 1255 6017
+* notice: next accum: outdated-unq outdated-all / unq all: 1227 5948 / 1256 6018
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-10-01 2025-10-15]
+
 2025-10-15T01:59:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18515371180 # 1283
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
